--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="styles/headers.css">
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/hamburger-icon.css">
+		<link rel="stylesheet" href="styles/media_queries.css">
     <title>Tyler Swindell. Design.</title>
   </head>
 
   <body>
-    <main>
+    <div class="container">
       <!-- HEADER SECTION -->
       <header>
         <div class="hamburger-icon">
@@ -27,12 +30,13 @@
       </header>
       <!-- END HEADER SECTION -->
 
+      <main>
       <!-- ABOUT SECTION -->
       <section id="about" class="about" name="about">
         <div class="portfolio-image"></div>
         <div>
-          <p class="semibold-text sz-xxl dark-sf">Hello!</p>
-          <h1 class="light-text sz-lg">My name is <span class="medium-text italic dark-sf">Tyler Swindell</h1>
+          <p class="sz-xxl dark-sf">Hello!</p>
+          <h1 class="light-text sz-lg">My name is <span class="sz-lg medium-text italic dark-sf">Tyler Swindell</h1>
           <p class="light-text sz-md">
             I am a multidisciplinary design professional with over a decade in
             the visual design field focusing on frontend web development.
@@ -43,38 +47,39 @@
 
       <!-- SKILLS AND INTERESTS SECTION -->
       <section id="skills" class="skills" name="skills">
-        <div class="lg-icon"></div>
-        <h2 class="semibold-text sz-lg">Skills and Interests</h2>
-        <div>
-          <h3 class="semibold-text sz-m">Designer</h3>
+        <img class="lg-icon dark-seafoam-filter" src="imgs/0_skills-and-interests.svg" alt="Head and Shoulders Icon">
+
+        <h2>Skills and Interests</h2>
+        <div class="content">
+          <h3>Designer</h3>
           <p>
             I value simple content structure, clean design patterns, and
             thoughtful interactions.
           </p>
 
-          <div class="md-icon"></div>
-          <h4>Design Specialist</h4>
-          <p>UX, UI, Web Apps, Logos</p>
+          <img class="md-icon dark-seafoam-filter" src="imgs/1_design-specialties.svg" alt="Framed Painting Icon">
+          <h4>Design Specialties</h4>
+          <p>UX/UI, Web Apps, Logos</p>
 
-          <div class="md-icon"></div>
+          <img class="md-icon dark-seafoam-filter" src="imgs/2_design-tools.svg" alt="Paint Brush Icon">
           <h4>Design Tools</h4>
           <p>
-            Figma, Adobe Creative Suite, Font Awesome, Pen & Paper, Procreate
+            Figma, Adobe Creative Suite (XD, Photoshop, Illustrator), Google Fonts, Pen & Paper, Procreate
           </p>
 
           <hr />
 
-          <h3 class="semibold-text">Frontend Developer</h3>
+          <h3>Frontend Developer</h3>
           <p>
             I value simple content structure, clean design patterns, and
             thoughtful interactions.
           </p>
 
-          <div class="md-icon"></div>
+          <img class="md-icon dark-seafoam-filter" src="imgs/3_languages.svg" alt="Curly Brackets and Ellipses Icon">
           <h4>Languages</h4>
           <p>HTML, CSS, Javascript, PHP, SQL</p>
 
-          <div class="md-icon"></div>
+          <img class="md-icon dark-seafoam-filter" src="imgs/4_framworks-technology.svg" alt="Puzzle Piece Icon">
           <h4>Frameworks and Technologies</h4>
           <p>
             React, React-Native, DynamoDB, AWS S3, Redux, MongoDB, Firebase,
@@ -86,40 +91,58 @@
 
       <!-- PROJECTS SECTION -->
       <section id="projects" class="projects" name="projects">
-        <div class="lg-icon"></div>
-        <h2 class="semibold-text sz-lg">Recent Projects</h2>
-        <div class="project-item">
-          <h3 class="semibold-text sz-lg">Stroop Stress Task</h3>
-          <p>
-            Developed to measure a person’s selective attention capacity/skills
-            and processing speed.
-            <br />
-            Built using ReactJS, Bootstrap, Firestore and Firebase Auth.
-          </p>
-        </div>
-
-        <div class="project-item">
-          <h3 class="semibold-text sz-lg">LaunchX</h3>
-          <p>
-            LaunchX is a mobile app Utilizing SpaceX’s public API to display and
-            track upcoming and past SpaceX light information.
-            <br />
-            Developed using React Native with Expo, as well as React Redux.
-          </p>
-        </div>
-
-        <div class="project-item">
-          <h3 class="semibold-text sz-lg">Space Ball Shooter</h3>
-          <p>
-            An arcade style space shooter built in HTML Canvas and Javascript.
-            <br />
-            Developed without the use of preexisting code frameworks or
-            templates.
-          </p>
+        <img class="lg-icon dark-seafoam-filter" src="imgs/5_recent-projects.svg" alt="Terminal and Arrow Brackets Icon">
+        <h2>Recent Projects</h2>
+        <div class="projects-container">
+          <div class="project-item">
+            <div class="project-item-content">
+              <a href="https://tylerswindell.design/">
+                <h3>Stroop Stress Task</h3>
+              </a>
+              <p>
+                Developed to measure a person’s selective attention capacity/skills
+                and processing speed.
+                <br />
+                <br />
+                Built using ReactJS, Bootstrap, Firestore and Firebase Auth.
+              </p>
+            </div>
+          </div>
+  
+          <div class="project-item drop-border">
+            <div class="project-item-content">
+              <a href="https://github.com/TylerSwindell/LaunchX">
+                <h3>LaunchX</h3>
+              </a>
+              <p>
+                LaunchX is a mobile app Utilizing SpaceX’s public API to display and
+                track upcoming and past SpaceX light information.
+                <br />
+                <br />
+                Developed using React Native with Expo, as well as React Redux.
+              </p>
+            </div>
+          </div>
+  
+          <div class="project-item">
+            <div class="project-item-content">
+              <a href="">
+                <h3>Space Ball Shooter</h3>
+              </a>
+              <p>
+                An arcade style space shooter built in HTML Canvas and Javascript.
+                <br />
+                <br />
+                Developed without the use of preexisting code frameworks or
+                templates.
+              </p>
+            </div>
+          </div>
+  
         </div>
       </section>
       <!-- END PROJECTS SECTION -->
-
+    </main>
       <!-- FOOTER SECTION -->
       <footer>
         <nav>
@@ -134,9 +157,17 @@
             <li><a href="#projects">Projects</a></li>
           </ul>
         </nav>
-        <p class="copyright sz-sm dark-sf" name="copyright">Copyright © 2023 Tyler Swindell <br> All Rights Reserved</p>
-        <div class="social-icons"></div>
+        <p class="copyright dark-sf" name="copyright">Copyright &copy 2023 Tyler Swindell <br> All Rights Reserved</p>
+        <div class="social-icons">
+          <a href="https://github.com/tylerswindell">
+            <img class="sm-icon dark-seafoam-filter" src="imgs/github-svgrepo-com.svg" alt="GitHub Logo Icon">
+          </a>
+
+          <a href="https://www.linkedin.com/in/tylerswindell/">
+            <img class="sm-icon dark-seafoam-filter" src="imgs/linkedin-round-svgrepo-com.svg" alt="LinkedIn Logo Icon">
+          </a>
+        </div>
       </footer>
-    </main>
+    </div>
   </body>
 </html>
