changes assets structure

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <!-- SKILLS AND INTERESTS SECTION -->
       <section id="skills" class="skills" name="skills">
-        <img class="lg-icon dark-seafoam-filter" src="imgs/0_skills-and-interests.svg" alt="Head and Shoulders Icon">
+        <img class="lg-icon dark-seafoam-filter" src="assets/0_skills-and-interests.svg" alt="Head and Shoulders Icon">
 
         <h2>Skills and Interests</h2>
         <div class="content">
@@ -57,11 +57,11 @@
             thoughtful interactions.
           </p>
 
-          <img class="md-icon dark-seafoam-filter" src="imgs/1_design-specialties.svg" alt="Framed Painting Icon">
+          <img class="md-icon dark-seafoam-filter" src="assets/1_design-specialties.svg" alt="Framed Painting Icon">
           <h4>Design Specialties</h4>
           <p>UX/UI, Web Apps, Logos</p>
 
-          <img class="md-icon dark-seafoam-filter" src="imgs/2_design-tools.svg" alt="Paint Brush Icon">
+          <img class="md-icon dark-seafoam-filter" src="assets/2_design-tools.svg" alt="Paint Brush Icon">
           <h4>Design Tools</h4>
           <p>
             Figma, Adobe Creative Suite (XD, Photoshop, Illustrator), Google Fonts, Pen & Paper, Procreate
@@ -75,11 +75,11 @@
             thoughtful interactions.
           </p>
 
-          <img class="md-icon dark-seafoam-filter" src="imgs/3_languages.svg" alt="Curly Brackets and Ellipses Icon">
+          <img class="md-icon dark-seafoam-filter" src="assets/3_languages.svg" alt="Curly Brackets and Ellipses Icon">
           <h4>Languages</h4>
           <p>HTML, CSS, Javascript, PHP, SQL</p>
 
-          <img class="md-icon dark-seafoam-filter" src="imgs/4_framworks-technology.svg" alt="Puzzle Piece Icon">
+          <img class="md-icon dark-seafoam-filter" src="assets/4_framworks-technology.svg" alt="Puzzle Piece Icon">
           <h4>Frameworks and Technologies</h4>
           <p>
             React, React-Native, DynamoDB, AWS S3, Redux, MongoDB, Firebase,
@@ -91,7 +91,7 @@
 
       <!-- PROJECTS SECTION -->
       <section id="projects" class="projects" name="projects">
-        <img class="lg-icon dark-seafoam-filter" src="imgs/5_recent-projects.svg" alt="Terminal and Arrow Brackets Icon">
+        <img class="lg-icon dark-seafoam-filter" src="assets/5_recent-projects.svg" alt="Terminal and Arrow Brackets Icon">
         <h2>Recent Projects</h2>
         <div class="projects-container">
           <div class="project-item">
@@ -160,11 +160,11 @@
         <p class="copyright dark-sf" name="copyright">Copyright &copy 2023 Tyler Swindell <br> All Rights Reserved</p>
         <div class="social-icons">
           <a href="https://github.com/tylerswindell">
-            <img class="sm-icon dark-seafoam-filter" src="imgs/github-svgrepo-com.svg" alt="GitHub Logo Icon">
+            <img class="sm-icon dark-seafoam-filter" src="assets/github-svgrepo-com.svg" alt="GitHub Logo Icon">
           </a>
 
           <a href="https://www.linkedin.com/in/tylerswindell/">
-            <img class="sm-icon dark-seafoam-filter" src="imgs/linkedin-round-svgrepo-com.svg" alt="LinkedIn Logo Icon">
+            <img class="sm-icon dark-seafoam-filter" src="assets/linkedin-round-svgrepo-com.svg" alt="LinkedIn Logo Icon">
           </a>
         </div>
       </footer>
