Added mobile nav animation

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <div class="container">
       <!-- HEADER SECTION -->
       <header>
-        <div class="hamburger-icon">
+        <div id="hamburger-icon" class="hamburger-icon">
           <span class="hb-line"></span>
           <span class="hb-line"></span>
           <span class="hb-line"></span>
         </div>
-        <nav id="expanded-nav" class="hidden">
+        <nav id="mobile-nav" class="side-nav closed-nav">
           <div class="exit-icon">
             <span class="x-line"></span>
             <span class="x-line"></span>
