Fixed broken project link

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   
           <div class="project-item">
             <div class="project-item-content">
-              <a href="">
+              <a href="https://tylerswindell.github.io/BallShooter/">
                 <h3>Space Ball Shooter</h3>
               </a>
               <p>
