Fixed bug in mobile navigation menu

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="content">
           <div class="project-item">
             <div class="project-item-content">
-              <a href="https://tylerswindell.design/">
+              <a href="https://demo-stroop.netlify.app/">
                 <h3>Stroop Stress Task</h3>
               </a>
               <p>
