--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/navigation.css">
     <link rel="stylesheet" href="styles/hamburger-icon.css">
 		<link rel="stylesheet" href="styles/media-queries.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.png">
 
     <script src="index.js" defer></script>
 
