Added config for portfolio items and automated element insert.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles/media-queries.css" />
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.png" />
 
-    <script src="index.js" defer></script>
+    <script src="src/index.js" type="module" defer></script>
 
     <title>Tyler Swindell. Design.</title>
   </head>
@@ -249,54 +249,7 @@
             />
             <h2>Recent Projects</h2>
           </div>
-          <div class="content">
-            <div class="project-item">
-              <div class="project-item-content">
-                <a href="https://demo-stroop.netlify.app/">
-                  <h3>Stroop Stress Task</h3>
-                </a>
-                <p>
-                  Developed to measure a person’s selective attention
-                  capacity/skills and processing speed.
-                  <br />
-                  <br />
-                  Built using ReactJS, Bootstrap, Firestore and Firebase Auth.
-                </p>
-              </div>
-            </div>
-
-            <div class="project-item drop-border">
-              <div class="project-item-content">
-                <a href="https://github.com/TylerSwindell/LaunchX">
-                  <h3>LaunchX</h3>
-                </a>
-                <p>
-                  LaunchX is a mobile app Utilizing SpaceX’s public API to
-                  display and track upcoming and past SpaceX light information.
-                  <br />
-                  <br />
-                  Developed using React Native with Expo, as well as React
-                  Redux.
-                </p>
-              </div>
-            </div>
-
-            <div class="project-item">
-              <div class="project-item-content">
-                <a href="https://tylerswindell.github.io/BallShooter/">
-                  <h3>Space Ball Shooter</h3>
-                </a>
-                <p>
-                  An arcade style space shooter built in HTML Canvas and
-                  Javascript.
-                  <br />
-                  <br />
-                  Developed without the use of preexisting code frameworks or
-                  templates.
-                </p>
-              </div>
-            </div>
-          </div>
+          <div class="content"></div>
         </section>
         <!-- END PROJECTS SECTION -->
       </main>
