Locally hosting pdf

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <ul>
             <li>
               <a
-                href="https://drive.google.com/file/d/1CuHym94cHhB0o_A3EjKATu9wwNODQYAH/view"
+                href="assets/resume-tyler_swindell-20230531.pdf"
                 target="_blank"
                 >Resume</a
               >
@@ -336,7 +336,7 @@
           <ul>
             <li>
               <a
-                href="https://drive.google.com/file/d/1CuHym94cHhB0o_A3EjKATu9wwNODQYAH/view"
+                href="assets/resume-tyler_swindell-20230531.pdf"
                 target="_blank"
                 >Resume</a
               >
