--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-6C3TRFH1BV"
+      src="https://www.googletagmanager.com/gtag/js?id=G-1K3PKSRTEM"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -12,8 +13,23 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-6C3TRFH1BV");
+      gtag("config", "G-1K3PKSRTEM");
     </script>
+
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-KMMKQGH");
+    </script>
+    <!-- End Google Tag Manager -->
 
     <script
       src="src/index.js"
@@ -74,6 +90,16 @@
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KMMKQGH"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div
       id="modal-overlay"
       class="hidden"
