--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <!-- Google tag (gtag.js) -->
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -87,6 +86,58 @@
     />
 
     <title>Tyler Swindell. Design.</title>
+    <meta
+      name="description"
+      content="Tyler Swindell's porfolio of recent work and projects."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://tylerswindell.design/"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:title"
+      content="Tyler Swindell. Design."
+    />
+    <meta
+      property="og:description"
+      content="Tyler Swindell's porfolio of recent work and projects."
+    />
+    <meta
+      property="og:image"
+      content="assets/open_graph.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta
+      name="twitter:card"
+      content="assets/open_graph.png"
+    />
+    <meta
+      property="twitter:domain"
+      content="tylerswindell.design"
+    />
+    <meta
+      property="twitter:url"
+      content="https://tylerswindell.design/"
+    />
+    <meta
+      name="twitter:title"
+      content="Tyler Swindell. Design."
+    />
+    <meta
+      name="twitter:description"
+      content="Tyler Swindell's porfolio of recent work and projects."
+    />
+    <meta
+      name="twitter:image"
+      content="assets/open_graph.png"
+    />
   </head>
 
   <body>
