Updated image directory

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
     />
     <meta
       property="og:image"
-      content="assets/open_graph.png"
+      content="/assets/open_graph.png"
     />
 
     <!-- Twitter Meta Tags -->
     <meta
       name="twitter:card"
-      content="assets/open_graph.png"
+      content="/assets/open_graph.png"
     />
     <meta
       property="twitter:domain"
@@ -136,7 +136,7 @@
     />
     <meta
       name="twitter:image"
-      content="assets/open_graph.png"
+      content="/assets/open_graph.png"
     />
   </head>
 
