Added webp file for portfolio-image

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-1K3PKSRTEM"
+      defer
     ></script>
-    <script>
+    <script defer>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
@@ -17,7 +18,7 @@
     </script>
 
     <!-- Google Tag Manager -->
-    <script>
+    <script defer>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
