new open graph image

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
     />
     <meta
       property="og:image"
-      content="/assets/open_graph.png"
+      content="/assets/open_graph.svg"
     />
 
     <!-- Twitter Meta Tags -->
     <meta
       name="twitter:card"
-      content="/assets/open_graph.png"
+      content="/assets/open_graph.svg"
     />
     <meta
       property="twitter:domain"
@@ -137,7 +137,7 @@
     />
     <meta
       name="twitter:image"
-      content="/assets/open_graph.png"
+      content="/assets/open_graph.svg"
     />
   </head>
 
