--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                 >Resume</a
               >
             </li>
+            <li><a href="#skills">Skills</a></li>
             <li>
               <a
                 id="projects-nav"
@@ -420,6 +421,7 @@
               >
             </li>
             <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
           </ul>
         </nav>
