--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
                     <a
                       id="project-slideshow-link"
                       href=""
+                      target="_blank"
                     ></a>
                   </div>
                   <div class="project-slideshow-content-lower">
