--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
     />
     <link
       rel="stylesheet"
+      href="styles/slideshow.css"
+    />
+    <link
+      rel="stylesheet"
       href="styles/hamburger-icon.css"
     />
     <link
@@ -186,8 +190,9 @@
                 >Projects</a
               >
             </li>
-            <li>
+            <li class="hover">
               <a
+                class="nav-button"
                 href="mailto:tyler.swindell.design@gmail.com"
                 target="_blank"
                 >Write Me!</a
@@ -417,9 +422,7 @@
                       target="_blank"
                     ></a>
                   </div>
-                  <div class="project-slideshow-content-lower">
-                    <p></p>
-                  </div>
+                  <p class="project-slideshow-content-lower"></p>
                 </div>
                 <button id="next-btn">&#8620;</button>
               </div>
